--- a/index.html
+++ b/index.html
@@ -5,11 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        *{
+            box-sizing: border-box;
+        }
+        #main_wrap{
+            margin: 0 auto;
+            text-align: center;
+        }
+        h1{
+            color: blueviolet;
+            font-size: 1.6em;
+        }
+        #text_box{
+            margin: 0 auto;
+        }
+
+    </style>
+    <script>
+        function onClick(){
+            //テキストボックスの値を取得
+            var value = document.getElementById("text").value;
+            //値を設定する
+            document.querySelector('.area').innerHTML = value;
+            }
+    </script>
 </head>
 <body>
-    <form action="xxx.html" method="get" name="mail_form">
-        メールアドレス：<input type="text" name="mail">
-        <input type="submit" value="送信"> 
-    </form>
+    <div id="main_wrap">
+        <h1>テキスト投稿</h1>
+        <form id="text_box">
+            <input type="text" id="text"/>
+            <input type="button" value="投稿" onclick="onClick();"/>
+        </form>
+        <p class="area">ここに表示されます。</p>
+    </div>
+    </body>
+
 </body>
 </html>
