--- a/index.html
+++ b/index.html
@@ -8,17 +8,52 @@
     <style>
         *{
             box-sizing: border-box;
+            padding: 0;
+            margin: 0 auto;
         }
         #main_wrap{
             margin: 0 auto;
             text-align: center;
         }
         h1{
-            color: blueviolet;
+            color: #2571f7;
             font-size: 1.6em;
+            margin-bottom: 10px;
         }
-        #text_box{
+        #text_box input{
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+            background: transparent;
+            border: none;
+            border-radius: 0;
+            font: inherit;
+            outline: none;
             margin: 0 auto;
+        }
+        #text_box input[type="text"]{
+            padding: 5px;
+            border: 1px solid #333;
+        }
+        #text_box input[type="button"]{
+            padding: 5px;
+            border-radius: 5px;
+            background: cornflowerblue;
+            color: #fff;
+        }
+        .area{
+            width: 50%;
+            background: rgb(213, 227, 255);
+            margin-top: 30px;
+            padding: 20px;
+        }
+        .area p{
+            display: block;
+            padding: 5px 10px;
+            background: #fff;
+        }
+        .area p:nth-child(n + 2){
+            margin-top: 5px;
         }
 
     </style>
@@ -27,9 +62,10 @@
             //テキストボックスの値を取得
             var value = document.getElementById("text").value;
             var element = document.getElementById('area');
+            const first = document.getElementById('first'); 
             //値を設定する
-            document.querySelector('#area').innerHTML = '<p>' + value + '</p>' ;
             element.insertAdjacentHTML('afterbegin', '<p>' + value + '</p>');
+            first.remove();
             }
     </script>
 </head>
@@ -40,8 +76,8 @@
             <input type="text" id="text"/>
             <input type="button" value="投稿" onclick="onClick();"/>
         </form>
-        <div id="area">
-            <p>ここに表示されます。</p>
+        <div class="area" id="area">
+            <p id="first">ここに表示されます。</p>
         </div>
     </div>
     </body>
